--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -34,8 +34,8 @@
   "text-page-terms-of-service": "Terms of Service",
   "text-page-privacy-policy": "Privacy Policy",
   "text-page-faq": "Frequently Asked Questions",
-  "text-subscribe-heading": "Get Expert Tips In Your Inbox",
-  "text-subscribe-description": "Subscribe to our newsletter and stay updated.",
+  "text-subscribe-heading": "Be The First In Line",
+  "text-subscribe-description": "Subscribe, and be the first to know when we come out with new designs.",
   "text-banner-thumbnail": "Banner Thumbnail",
   "text-brand-thumbnail": "Brand Thumbnail",
   "text-support-thumbnail": "Support Thumbnail",
